feat(java): support compressed array serializers on JDK 8